Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -188,7 +188,6 @@
     "cache": "Caché",
     "cache-dir": "Carpeta de cache '%folderName%'",
     "calculate": "Calcular",
-    "calculated-tax-diff": "Při výpočtu rozdílu daně. %tax% VS %tax2%",
     "calculation": "Cálculo",
     "calendar": "Calendario",
     "can-not-open-zip-file": "No puedo abrir archivo zip '%zipFile%'",
@@ -732,7 +731,7 @@
     "full-access": "Acceso completo",
     "full-path": "Ruta completa",
     "gap-found": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%",
-    "gap-found-not-fillable": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%, sin embargo no se va a rellenar.",
+    "gap-found-not-fillable": "Byla nalezena mezera pro číslo %numero%, den %fecha%, %codserie% a společnost %idempresa%, nicméně nebude doplněna.",
     "gaps-out-of-range": "Bylo nalezeno %count% mezer, které nelze doplnit, protože jsou více než 1000 čísel od posledního.",
     "general": "General",
     "general-concepts": "Conceptos generales",
@@ -1400,7 +1399,7 @@
     "refunds": "Devoluciones",
     "register": "Registrar",
     "register-install-ad": "Zaregistrujte instalaci FacturaScripts",
-    "register-install-ad-p": "Pokud zaregistrujete instalaci FacturaScripts, získáte 1 měsíc PRO sponzorství, které vám umožní stáhnout jeden z našich exkluzivních pluginů. Navíc nám to pomůže získat statistiky verzí jádra a PHP.",
+    "register-install-ad-p": "Pokud zaregistrujete instalaci FacturaScripts, získáte 1 měsíc PRO sponzorství, které vám umožní stáhnout jeden z našich exkluzivních pluginů. Navíc nám to pomůže získat statistiky verzí jádra y PHP.",
     "register-installation": "Registrar instalación",
     "register-installation-p": "Registre su instalación para poder actualizar plugins de pago o privados.",
     "register-symbol": "#",
@@ -1615,7 +1614,7 @@
     "subaccount-belongs-other-year": "La subcuenta %subAccountCode% pertenece a otro ejercicio.",
     "subaccount-irpf": "Účet pro zálohy",
     "subaccount-irpf-creditor": "Účet věřitele záloh na daň z příjmů",
-    "subaccount-not-found": "Subcuenta %subAccountCode% no encontrada.",
+    "subaccount-not-found": "Subkonto %code% nebylo nalezeno.",
     "subaccount-purchases": "Cuenta para compras",
     "subaccount-pyg-not-found": "Subcuenta de pérdidas y ganancias no encontrada",
     "subaccount-sales": "Cuenta de ventas",
