--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -188,7 +188,6 @@
     "cache": "Cache",
     "cache-dir": "Cache répertoire '%folderName%'",
     "calculate": "Calculer",
-    "calculated-tax-diff": "Différence trouvée en calculant le total de la TVA. %tax% VS %tax2%",
     "calculation": "Calcul",
     "calendar": "Calendrier",
     "can-not-open-zip-file": "Impossible d'ouvrir le fichier zip '%zipFile%'",
@@ -261,7 +260,7 @@
     "cifnif": "CIF \/ NIF",
     "cities": "Villes",
     "city": "Ville",
-    "classic-tax-method": "Clásico",
+    "classic-tax-method": "Classique",
     "clear-filters": "Effacer les filtres",
     "click-link-to-add": "Vous pouvez ajouter des fichiers à la bibliothèque, depuis le menu Administration",
     "clone": "Cloner",
