--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -188,7 +188,6 @@
     "cache": "Caché",
     "cache-dir": "Cartafol da caché \"% item%\"",
     "calculate": "Calcular",
-    "calculated-tax-diff": "Diferenza atopada ó calcular o total do IVE. %tax% VS %tax2%",
     "calculation": "Cálculo",
     "calendar": "Calendario",
     "can-not-open-zip-file": "Non podo abrir o ficheiro zip '%zipFile%'",
@@ -1759,7 +1758,7 @@
     "type-success": "Tipo correcto",
     "type-warning": "Tipo advertencia",
     "unbalance": "Descuadre",
-    "unbalanced-accounting-entry": "Asiento descuadrado",
+    "unbalanced-accounting-entry": "Asento descuadrado",
     "unbalanced-entry": "Asento descuadrado",
     "unchecked": "Non comprobado",
     "under-minimums": "Baixo mínimos",
