--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -188,7 +188,6 @@
     "cache": "nascondiglio",
     "cache-dir": "Directory cache '0'",
     "calculate": "Calcolare",
-    "calculated-tax-diff": "Differenza trovata nel calcolare l'IVA totale. %tax% VS %tax2%",
     "calculation": "calcolo",
     "calendar": "calendario",
     "can-not-open-zip-file": "Impossibile aprire il file zip '0'",
@@ -261,7 +260,7 @@
     "cifnif": "CIF\/NIF",
     "cities": "Città",
     "city": "Città",
-    "classic-tax-method": "Clásico",
+    "classic-tax-method": "Classico",
     "clear-filters": "Pulire il filttro",
     "click-link-to-add": "Fare clic sul link per aggiungere",
     "clone": "Duplicare",
@@ -732,7 +731,7 @@
     "full-access": "accesso completo",
     "full-path": "Percorso completo",
     "gap-found": "Gap trovato per il numero %numero%, giorno %fecha%, %codserie% e azienda %idempresa%",
-    "gap-found-not-fillable": "È stato trovato un buco per il numero %numero%, giorno %fecha%, %codserie% e azienda %idempresa%; tuttavia non verrà compilato.",
+    "gap-found-not-fillable": "È stato trovato un buco per il numero %numero%, data %fecha%, %codserie% e azienda %idempresa%; tuttavia non verrà compilato.",
     "gaps-out-of-range": "Sono stati trovati %count% buchi che non potranno essere riempiti perché sono a più di 1000 numeri dall'ultimo.",
     "general": "Generale",
     "general-concepts": "Concetti generali",
