--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -188,7 +188,6 @@
     "cache": "Pamięć podręczna",
     "cache-dir": "Folder pamięci podręcznej '%folderName%'",
     "calculate": "Oblicz",
-    "calculated-tax-diff": "Znaleziono różnicę podczas obliczania całkowitego VATu. %tax% VS %tax2%",
     "calculation": "Obliczenie",
     "calendar": "Kalendarz",
     "can-not-open-zip-file": "Nie mogę otworzyć pliku zip '%zipFile%'",
@@ -981,7 +980,7 @@
     "login": "Zaloguj się",
     "login-cookie-fail": "Nieprawidłowy ciasteczko logowania",
     "login-image": "Obrazek logowania",
-    "login-invalid-db-password": "Contraseña de base de datos incorrecta",
+    "login-invalid-db-password": "Nieprawidłowe hasło bazy danych",
     "login-ok": "Sesja została pomyślnie uruchomiona (ciasteczko). Użytkownik: '%nick%'",
     "login-password-changed": "Hasło zmienione pomyślnie",
     "login-password-fail": "Użytkownik lub hasło są niepoprawne",
