--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -188,7 +188,6 @@
     "cache": "Caché",
     "cache-dir": "Carpeta de la caché '%folderName%'",
     "calculate": "Calcular",
-    "calculated-tax-diff": "Diferència trobada en calcular el total de l'IVA. %tax% VS %tax2%",
     "calculation": "Càlcul",
     "calendar": "Calendari",
     "can-not-open-zip-file": "No es pot obrir el fitxer zip '%zipFile%'",
@@ -1567,7 +1566,7 @@
     "sort-by-date-asc": "Ordenar por fecha ascendente",
     "sort-by-date-desc": "Ordenar per data desc.",
     "sort-by-debit-asc": "Ordenar por debe ascendente",
-    "sort-by-debit-desc": "Ordenar por debe descendente",
+    "sort-by-debit-desc": "Ordenar per dèbit descendent",
     "sort-by-description-asc": "Ordenar per descripció ascendent",
     "sort-by-description-desc": "Ordenar per descripció descendent",
     "sort-by-price-asc": "Ordenar per preu ascendent",
