--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -188,7 +188,6 @@
     "cache": "Cache",
     "cache-dir": "Cache-aren karpeta '%folderName%'",
     "calculate": "Kalkulatu",
-    "calculated-tax-diff": "Aurkitu den desberdinotasuna IVA osoa kalkulatzean. %tax% VS %tax2%",
     "calculation": "Kalkulua",
     "calendar": "Egutegia",
     "can-not-open-zip-file": "Ezin da '%zipFile%' zip artxiboa ireki",
@@ -261,7 +260,7 @@
     "cifnif": "IFK\/IFZ",
     "cities": "Hiriak",
     "city": "Hiria",
-    "classic-tax-method": "Clásico",
+    "classic-tax-method": "Klasikoa",
     "clear-filters": "Iragazkiak garbitu",
     "click-link-to-add": "Liburutegitik ahal dituzu artxiboak gehitu, administratzaile menuan.",
     "clone": "Bikoiztu",
@@ -1566,7 +1565,7 @@
     "sort-by-credit-desc": "Ordenatu kredituaren arabera (jaitsieran)",
     "sort-by-date-asc": "Ordenar por fecha asc.",
     "sort-by-date-desc": "Dataren arabera sailkatu azkenean",
-    "sort-by-debit-asc": "Ordenar por debe ascendente",
+    "sort-by-debit-asc": "Ordenatu zordunketa goranzkoan",
     "sort-by-debit-desc": "Ordenar por debe descendente",
     "sort-by-description-asc": "Ordenar por descripción ascendente",
     "sort-by-description-desc": "Ordenar por descripción descendente",
