Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1676,7 +1676,7 @@
     "tax-area": "Zona de impuestos",
     "tax-areas": "Zonas de impuestos",
     "tax-base": "Base Imponible",
-    "tax-calculation-method": "Método cálculo impuestos",
+    "tax-calculation-method": "Metoda výpočtu daní",
     "tax-credit-account": "Cuenta de crédito para impuestos",
     "tax-debit-account": "Cuenta de débito para impuestos",
     "tax-transport": "Impuestos del transporte",
