--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1558,7 +1558,7 @@
     "sort": "Ordena",
     "sort-by-balance-asc": "Ordenatu saldoaren arabera (gorantz)",
     "sort-by-balance-desc": "Saldoaren arabera beherantz ordenatu",
-    "sort-by-code-asc": "Ordenar por código ascendente",
+    "sort-by-code-asc": "Kodearen arabera goranzka ordenatu",
     "sort-by-code-desc": "Kodearen arabera beheranzko ordenean",
     "sort-by-column": "Zutabean sailkatu",
     "sort-by-credit-asc": "Ordenar por haber ascendente",
@@ -1758,7 +1758,7 @@
     "type-success": "Mota zuzena",
     "type-warning": "Ohar mota",
     "unbalance": "Deskuadrea",
-    "unbalanced-accounting-entry": "Asiento descuadrado",
+    "unbalanced-accounting-entry": "Kontabilitate sarrera desorekatu",
     "unbalanced-entry": "Idazpen okerra",
     "unchecked": "Egiaztatu gabe",
     "under-minimums": "Minimoaren azpitik",
