--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1305,7 +1305,7 @@
     "previously-purchased-from-supplier": "Déjà acheté auprès d'un fournisseur",
     "previously-sold-to-customer": "Déjà vendu au client",
     "price": "Prix",
-    "price-adjusted-tax-method": "Ajustado a precio con impuestos",
+    "price-adjusted-tax-method": "Ajusté au prix TTC",
     "price-with-tax": "Prix TTC",
     "principal": "Principale",
     "print": "Impression",
