--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1305,7 +1305,7 @@
     "previously-purchased-from-supplier": "Comprado anteriormente ao provedor",
     "previously-sold-to-customer": "Vendido anteriormente ao cliente",
     "price": "Prezo",
-    "price-adjusted-tax-method": "Ajustado a precio con impuestos",
+    "price-adjusted-tax-method": "Axustado a prezo con impostos",
     "price-with-tax": "prezo con impostos",
     "principal": "Principal",
     "print": "Imprimir",
