--- a/Core/Translation/tr_TR.json
+++ b/Core/Translation/tr_TR.json
@@ -400,7 +400,7 @@
     "customers": "Müşteriler",
     "customize": "Özelleştir",
     "daily": "Günlük",
-    "daily-executions": "Ejecuciones diarias",
+    "daily-executions": "Günlük yürütmeler",
     "dasboard-backup-li1": "FacturaScripts'i silerseniz veya kaldırırsanız, verileri kaybedeceksiniz.",
     "dasboard-backup-li2": "XAMPP'yi silerseniz veya kaldırırsanız, verilerinizi kaybedersiniz.",
     "dasboard-backup-li3": "Bilgisayarı kaybederseniz, biçimlendirirseniz veya yok ederseniz veriler kaybolur.",
@@ -715,7 +715,7 @@
     "for-sale": "Satılık",
     "foresee": "Öngörmek",
     "format": "Biçim",
-    "formula-cost-price": "maliyet fiyatı + x% + y",
+    "formula-cost-price": "Maliyet fiyatı + x% + y",
     "formula-sale-price": "fiyat - x% - y",
     "formula-to-apply": "Uygulanacak formül",
     "fourth-quarter": "4. çeyrek",
@@ -1176,7 +1176,7 @@
     "opened": "Açık",
     "opening-acounting-completed": "Dönem açılışı başarılı",
     "opening-operation": "Açılış",
-    "operating-system": "İşletim Sistemi",
+    "operating-system": "İşletim sistemi",
     "operation": "İşlem",
     "operation-export": "Dışa aktarma işlemi",
     "operator": "Operatör",
@@ -1648,7 +1648,7 @@
     "supplier-invoice-deleted-successfully": "Satın alma faturası %docCode% başarıyla silindi.",
     "supplier-invoices": "Tedarikçi Faturaları",
     "supplier-not-found": "Tedarikçi bulunamadı",
-    "supplier-order": "Tedarikçi Siparişi",
+    "supplier-order": "Tedarikçi siparişi",
     "supplier-orders": "Tedarikçi siparişleri",
     "supplier-payment-concept": "Makbuz ödemesi %document%",
     "supplier-products": "Tedarikçi ürünleri",
