--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -613,7 +613,7 @@
     "es-tax-exception-e6": "Espanya: excepció per una altra causa",
     "es-tax-exception-location-rules": "es-tax-exception-location-rules",
     "es-tax-exception-n1": "Operacions interiors exemptes segons l'article 10.1 de la Llei 20\/1991 de l'IGIC",
-    "es-tax-exception-n5": "es-tax-exception-n5",
+    "es-tax-exception-n5": "Operacions exemptes per aplicació de l'article 25 de la Llei de l'IGIC",
     "es-tax-exception-passive-subject": "Espanya: N6 Inversió del subjecte passiu (art. 84 LIVA)",
     "es-tax-regime-agrarian": "Règim especial de l'agricultura, ramaderia i pesca",
     "es-tax-regime-cash-criteria": "Criteri de caixa",
@@ -1097,7 +1097,7 @@
     "new-customer": "Nou client",
     "new-customers": "Nous clients",
     "new-invoice-line-p": "Puedes añadir un producto pulsando el botón producto o escribiendo su referencia o código de barras en el campo código de barras. O pulsa el botón línea para una línea sin producto.",
-    "new-line": "Nueva línea",
+    "new-line": "Nova línia",
     "new-password": "Nova contrasenya",
     "new-price": "Nou preu",
     "new-product": "Nou producte",
@@ -1121,7 +1121,7 @@
     "no-plugins-installed": "No hi ha plugins instal·lats",
     "no-print-permission": "No té permís per imprimir o exportar",
     "no-reference": "Sense referència",
-    "no-results-found": "No se han encontrado resultados",
+    "no-results-found": "No s'han trobat resultats",
     "no-selected-item": "No hi ha cap element seleccionat",
     "no-stock": "No hi ha estoc",
     "no-updates-now": "No hi ha actualitzacions en aquest moment",
@@ -1565,7 +1565,7 @@
     "sort-by-credit-desc": "Ordenar por haber descendente",
     "sort-by-date-asc": "Ordenar por fecha ascendente",
     "sort-by-date-desc": "Ordenar per data desc.",
-    "sort-by-debit-asc": "Ordenar por debe ascendente",
+    "sort-by-debit-asc": "Ordenar per dèbit ascendent",
     "sort-by-debit-desc": "Ordenar per dèbit descendent",
     "sort-by-description-asc": "Ordenar per descripció ascendent",
     "sort-by-description-desc": "Ordenar per descripció descendent",
