Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -260,7 +260,7 @@
     "cifnif": "CIF\/NIF",
     "cities": "Städte",
     "city": "Stadt",
-    "classic-tax-method": "Clásico",
+    "classic-tax-method": "Klassisch",
     "clear-filters": "Filter löschen",
     "click-link-to-add": "Sie können Dateien aus der Bibliothek im Administratormenü hinzufügen.",
     "clone": "doppeln",
@@ -1676,7 +1676,7 @@
     "tax-area": "Steuerbereich",
     "tax-areas": "Steuerzonen",
     "tax-base": "Steuerbemessungsgrundlage",
-    "tax-calculation-method": "Método cálculo impuestos",
+    "tax-calculation-method": "Methode zur Steuerberechnung",
     "tax-credit-account": "Steuergutschriftkonto",
     "tax-debit-account": "Steuerlastschriftkonto",
     "tax-transport": "Steuerverkehr",
