--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1614,7 +1614,7 @@
     "subaccount-belongs-other-year": "%subAccountCode% azpi-kontua beste ekitaldi batekoa da.",
     "subaccount-irpf": "Saltze-subkontoa",
     "subaccount-irpf-creditor": "IRPF kreditari kontua",
-    "subaccount-not-found": "%subAccountCode% azpi-kontua ez da aurkitu.",
+    "subaccount-not-found": "%code% azpi-kontua ez da aurkitu.",
     "subaccount-purchases": "Erosketa kontua",
     "subaccount-pyg-not-found": "Galdu-irabazien azpikontua ez da aurkitu",
     "subaccount-sales": "Salmenta kontua",
@@ -1789,7 +1789,7 @@
     "updated-model": "%model% (%key%) %desc% Eguneratua",
     "updated-records": "%updatedRecords% erregistro eguneratuak %totalRecords%-n",
     "updater": "Eguneratzailea",
-    "updates-available": "Eguneratzeak eskuragarri",
+    "updates-available": "Eguneratzeak eskuragarri daude",
     "updates-available-p": "FacturaScripts-en eguneratzeak eskuragarri daude. Mesedez, egin klik eguneratzaileetan eta deskargatu bertsio berria. Eguneratzeek akatsak zuzentzen dituzte eta funtzio berriak gehitzen dituzte.",
     "updates-beta-warning": "Beta eguneratzeak aktibatu dira",
     "updates-beta-warning-p": "⚠️ Eguneraketak beta aktibatuta ditu. Eguneraketa hauek ez dira probatu eta probako instalazioetan soilik gomendatzen dira.",
