--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1676,7 +1676,7 @@
     "tax-area": "Área fiscal",
     "tax-areas": "Áreas fiscais",
     "tax-base": "Base Tributável",
-    "tax-calculation-method": "Método cálculo impuestos",
+    "tax-calculation-method": "Método de cálculo de impostos",
     "tax-credit-account": "Conta de crédito para impostos",
     "tax-debit-account": "Conta de débito para impostos",
     "tax-transport": "Transporte fiscal",
