--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -601,7 +601,7 @@
     "es_EC": "Espanyol (Ecuador)",
     "es-operation-tax-added-value": "Operació subjecta a l'IVA",
     "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
-    "es-operation-tax-igic": "es-operation-tax-igic",
+    "es-operation-tax-igic": "Operació subjecta a l'IGIC (Canàries)",
     "es-operation-tax-other": "Operació no subjecta als impostos anteriors",
     "es-tax-exception-art-14": "Espanya: N4 No subjecta art. 14 LIVA – Operacions vinculades a exportacions",
     "es-tax-exception-art-7": "Espanya: N3 No subjecta art. 7 LIVA – Operacions no subjectes (aportacions, transmissió d'UEA, mostres…)",
@@ -1822,7 +1822,7 @@
     "vat-document": "Document de l'IVA",
     "vat-exception": "Excepció d'IVA",
     "vat-number-is-short": "El número '%vat-number%' és massa curt",
-    "vat-number-not-valid": "%vat-number% no está registrado en el VIES",
+    "vat-number-not-valid": "%vat-number% no està registrat al VIES",
     "vat-number-not-vies": "El número '%vat-number%' no està registrat en el sistema VIES",
     "vat-regime": "Règim de l'IVA",
     "VAT-register": "Llibre d'imposts",
