Actualizadas las traducciones.

--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1305,7 +1305,7 @@
     "previously-purchased-from-supplier": "Previously purchased from supplier",
     "previously-sold-to-customer": "Previously purchased to customer",
     "price": "Price",
-    "price-adjusted-tax-method": "Price-adjusted (tax included)",
+    "price-adjusted-tax-method": "Price-adjusted (taxes included)",
     "price-with-tax": "Price with tax",
     "principal": "Main",
     "print": "Print",
