--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1567,7 +1567,7 @@
     "sort-by-date-desc": "Dataren arabera sailkatu azkenean",
     "sort-by-debit-asc": "Ordenatu zordunketa goranzkoan",
     "sort-by-debit-desc": "Ordenar por debe descendente",
-    "sort-by-description-asc": "Ordenar por descripción ascendente",
+    "sort-by-description-asc": "Ordenatu deskribapenaren arabera (goranzkoa)",
     "sort-by-description-desc": "Ordenar por descripción descendente",
     "sort-by-price-asc": "Ordenar por precio ascendente",
     "sort-by-price-desc": "Ordenatu prezioaren jaitsieran",
