--- a/Core/Translation/tr_TR.json
+++ b/Core/Translation/tr_TR.json
@@ -937,7 +937,7 @@
     "last-ip": "Son IP",
     "last-month": "Geçen ay",
     "last-price-estimation": "Son Tahmin Edilen Fiyat",
-    "last-price-sale": "Son Satış Fiyatı",
+    "last-price-sale": "Son satış fiyatı",
     "last-purchase-price": "Son satın alma fiyatı",
     "last-quarter": "Geçen çeyrek",
     "last-semester": "Geçen dönem",
