--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -600,7 +600,7 @@
     "errors": "Erros",
     "es_EC": "Espanyol (Ecuador)",
     "es-operation-tax-added-value": "Operació subjecta a l'IVA",
-    "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
+    "es-operation-tax-ceuta-melilla": "Operació subjecta a l'IPSI (Ceuta i Melilla)",
     "es-operation-tax-igic": "Operació subjecta a l'IGIC (Canàries)",
     "es-operation-tax-other": "Operació no subjecta als impostos anteriors",
     "es-tax-exception-art-14": "Espanya: N4 No subjecta art. 14 LIVA – Operacions vinculades a exportacions",
@@ -703,7 +703,7 @@
     "fixed-value": "Valor fix",
     "flag": "Bandera",
     "folder-not-writable": "No pots escriure en la carpeta de FacturaScripts.",
-    "folders-not-writable": "No se pot escriure sobre les carpetes de FacturaScripts: %folders%",
+    "folders-not-writable": "No es pot escriure sobre les carpetes de FacturaScripts: %folders%",
     "font": "Tipo de lletra",
     "font-size": "font-size",
     "footer": "Pié de página",
@@ -1297,7 +1297,7 @@
     "predefined-concepts": "Conceptes Predeterminats",
     "preferences": "Preferències",
     "preview": "Previsualitzar",
-    "preview-not-available": "Previsualización no disponible",
+    "preview-not-available": "Previsualització no disponible",
     "previous": "Anterior",
     "previous-balance": "Balanç anterior",
     "previous-documents": "Documents previs",
