--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1676,7 +1676,7 @@
     "tax-area": "Zona de impostos",
     "tax-areas": "zonas de impostos",
     "tax-base": "Base Impoñible",
-    "tax-calculation-method": "Método cálculo impuestos",
+    "tax-calculation-method": "Método de cálculo de impostos",
     "tax-credit-account": "Conta de crédito para impostos",
     "tax-debit-account": "Conta de débito para impostos",
     "tax-transport": "Transporte tributario",
