Actualizadas las traducciones

--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -732,7 +732,7 @@
     "full-path": "Bide-izen osoa",
     "gap-found": "Hutsune bat aurkitu da %number%, egun %date%, %codeseries% eta enpresa %idcompany%",
     "gap-found-not-fillable": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%, sin embargo no se va a rellenar.",
-    "gaps-out-of-range": "Se han encontrado %count% huecos que no se van a poder rellenar por estar a más de 1000 números del último.",
+    "gaps-out-of-range": "%count% hutsune aurkitu dira; azkenetik 1000 zenbakiz gora daudenez ezin izango dira bete.",
     "general": "Orokorra",
     "general-concepts": "Kontzeptu orokorrak",
     "general-data": "Datu orokorrak",
@@ -1305,7 +1305,7 @@
     "previously-purchased-from-supplier": "Aurretik hornitzaileari erosia",
     "previously-sold-to-customer": "Aurretik bezeroari salduta",
     "price": "Prezioa",
-    "price-adjusted-tax-method": "Ajustado a precio con impuestos",
+    "price-adjusted-tax-method": "Zergak barne dituen prezioari egokitua",
     "price-with-tax": "Prezioa + zergak",
     "principal": "Nagusia",
     "print": "Inprimatu",
@@ -1376,7 +1376,7 @@
     "receipt": "Ordainagiria",
     "receipt-expense-account": "%document% ordainagiriaren gastuak",
     "receipts": "Ordainagiriak",
-    "receiver": "Receptor",
+    "receiver": "Hartzailea",
     "record-deleted-correctly": "Erregistroa ondo ezabatu da!",
     "record-deleted-error": "Errorea errejistroa ezabatzean",
     "record-not-found": "Ez da erregistroa aurkitu",
