--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -97,7 +97,7 @@
     "already-installed": "Již nainstalováno",
     "already-installed-p": "Program je již nainstalován",
     "always-to-company-email": "Siempre al email de la empresa",
-    "always-to-config-email": "Siempre al email de la configuración",
+    "always-to-config-email": "Vždy na e-mail z nastavení",
     "amount": "Importe",
     "amount-without-discount": "Precio sin descuento",
     "and": "y",
@@ -980,7 +980,7 @@
     "login": "Iniciar sesión",
     "login-cookie-fail": "Neplatný relační cookie",
     "login-image": "Imagen de login",
-    "login-invalid-db-password": "Contraseña de base de datos incorrecta",
+    "login-invalid-db-password": "Nesprávné heslo databáze",
     "login-ok": "Sesión iniciada satisfactoriamente (cookie). Usuario: '%nick%'",
     "login-password-changed": "Heslo bylo úspěšně změněno",
     "login-password-fail": "El usuario o la contraseña son incorrectos",
