Actualizadas las traducciones

--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1676,7 +1676,7 @@
     "tax-area": "Area fiscale",
     "tax-areas": "aree fiscali",
     "tax-base": "Base Imponibile",
-    "tax-calculation-method": "Método cálculo impuestos",
+    "tax-calculation-method": "Metodo di calcolo delle imposte",
     "tax-credit-account": "Conto di credito per tasse",
     "tax-debit-account": "Conto addebito per tasse",
     "tax-transport": "Trasporto fiscale",
