--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -445,7 +445,7 @@
     "default-role": "F",
     "default-tax": "Imposto padrão",
     "default-to-company-email": "Por padrão ao e-mail da empresa",
-    "default-to-config-email": "Por defecto al email de la configuración",
+    "default-to-config-email": "Por padrão para o e-mail da configuração",
     "default-to-user-email": "Por defeito para o email do usuário",
     "default-warehouse": "Armazém predefinido",
     "delete": "Remover",
