--- a/Core/Translation/tr_TR.json
+++ b/Core/Translation/tr_TR.json
@@ -260,7 +260,7 @@
     "cifnif": "CIF\/NIF",
     "cities": "Şehirler",
     "city": "Şehir",
-    "classic-tax-method": "Clásico",
+    "classic-tax-method": "Klasik",
     "clear-filters": "Filtreleri temizle",
     "click-link-to-add": "Yönetici menüsünden kütüphaneden dosyalar ekleyebilirsiniz.",
     "clone": "Kopyala",
