--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1559,7 +1559,7 @@
     "sort-by-balance-asc": "Ordenar per saldo ascendent",
     "sort-by-balance-desc": "Ordenar per saldo descendent",
     "sort-by-code-asc": "Ordenar per codi ascendent",
-    "sort-by-code-desc": "Ordenar por código descendente",
+    "sort-by-code-desc": "Ordenar per codi descendent",
     "sort-by-column": "Ordenar per columna",
     "sort-by-credit-asc": "Ordenar per haver ascendent",
     "sort-by-credit-desc": "Ordenar por haber descendente",
