Actualizadas las traducciones.

--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -260,7 +260,7 @@
     "cifnif": "CIF\/NIF",
     "cities": "cidades",
     "city": "Cidade",
-    "classic-tax-method": "Clásico",
+    "classic-tax-method": "Clássico",
     "clear-filters": "Limpar filtros",
     "click-link-to-add": "haz-clic-en-el-enlace-para-agregar",
     "clone": "Duplicar",
